# matgraf-zadanie1

./: CMakeLists.txt
lib/: Camera.h  Cube.h  Line.h  Matrix4x4.h  Quaternion.h  Sphere.h  Surface.h  Vector.h
src/: Camera.cpp  Line.cpp  Matrix4x4.cpp  Quaternion.cpp  Sphere.cpp  Surface.cpp  Vector.cpp  main.cpp
